--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-h2{
-    color: red;
+body{
+    font-size: 3vw;
 }
 
 #profile{
@@ -11,7 +11,7 @@ h2{
     display: grid;
     grid-template-rows: 1fr 1fr;
 
-    height: 50px;
+    height: 15vw;
 }
 
 .thumbnail_grid{
@@ -48,13 +48,13 @@ h2{
 }
 
 #profile_pic{
-    width: 50px;
-    height: 50px;
+    width: 15vw;
+    height: 15vw;
 }
 
 .highlight_pic{
-    width: 35px;
-    height: 35px;
+    width: 10vw;
+    height: 10vw;
 
     margin-left: auto;
     margin-right: auto;
@@ -62,7 +62,7 @@ h2{
 
 #highlight_area{
     display: grid;
-    grid-template-columns: 45px 45px 1fr;
+    grid-template-columns: 12vw 12vw 1fr;
 }
 
 .highlight{
@@ -70,14 +70,14 @@ h2{
 }
 
 #id{
-    font-size: 18px;
+    font-size: 6vw;
     font-weight: 100;
 }
 
 button{
     height: 80%;
     width: 95%;
-    font-size: 10px;
+    font-size: 3vw;
     background-color: white;
     border: solid grey 1px;
     border-radius: 5px;
@@ -87,18 +87,21 @@ button{
 #top{
     display: grid;
     grid-template-columns: 4fr 7fr 4fr;
-    height: 30px;
-
+    height: 10vw;
+    min-height: 10vw;
     border-bottom: solid gray 0.1px;
-    margin-bottom: 10px;
+    margin-bottom: 3vw;
 }
 
 #top img{
+    height: 90%;
+    width: 90%;
+    object-fit: contain;
+
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
-
-    height: 100%;
-    object-fit: contain;
 }
 
 #top input{
@@ -116,7 +119,7 @@ button{
     border: solid gray 1px;
     border-radius: 3px;
 
-    font-size: 10px;
+    font-size: 3vw;
     font-weight: 100;
 }
 
@@ -125,12 +128,12 @@ i{
 }
 
 #top i{
-    font-size: 14px;
+    font-size: 4vw;
 }
 
 #top div{
     text-align: center;
-    padding-top: 6px;
+    padding-top: 3vw;
 }
 
 #sub_icon{
@@ -138,10 +141,10 @@ i{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
     text-align: center;
-    font-size: 15px;
+    font-size: 5vw;
 
     width: 100%;
-    height: 30px;
+    height: 8vw;
 }
 
 .selected{
